basic grid structure and section fillers

--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Shu Ting Hu</title>
-    </head>
 
-    <body>
-        OHH heyyy stalker! <br>
-        I'm currently completely redesigning my website, previous remnants have been archived... so come back soon!
-    </body>
+<head>
+    <!-- <meta name="keywords" content="TODO">
+    <meta name="description" content="TODO">
+    <meta name="author" content="Shu Ting Hu">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <title>Shu Ting Hu</title>
+
+    <link rel="stylesheet" href="https://use.typekit.net/sew5mui.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/grid.css">
+    <link rel="stylesheet" href="style/components.css">
+</head>
+
+<body>
+    <div class="wrapper" id="landing">
+        <div id="title">
+            <div class="header">
+                <p>
+                    <span class="word">hello,</span>
+                    <span class="word">你好,</span>
+                    <span class="word">bonjour,</span>
+                    <span class="word">안녕하세요,</span>
+                    <span class="word">hallo,</span>
+                    <span class="word">こんにちは,</span>
+                </p><br>
+                <p>i'm Shu Ting.</p>
+            </div>
+        </div>
+
+        <div id="graphic">
+            insert graphic here
+        </div>
+    </div>
+
+    <div class="wrapper" id="about">
+        <div id="photo">
+            insert photo here
+        </div>
+
+        <div id="bio">
+            <div class="header">
+                about.
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborumsed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+        </div>
+    </div>
+
+    <div class="wrap" id="projects">
+        <div class="header">
+            projects.
+        </div>
+    </div>
+
+    <div class="wrapper" id="creative">
+            <div id="playlist">
+                insert portfolio playlist
+            </div>
+    
+            <div id="film">
+                <div class="header">
+                    film.
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate
+                    velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident,
+                    sunt in culpa qui officia deserunt mollit anim id est laborumsed
+                    do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </div>
+        </div>
+
+    <script src="rotating-text.js"></script>
+</body>
+
 </html>
