initial chatbot, added projects

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!-- <meta name="keywords" content="TODO">
     <meta name="description" content="TODO"> -->
     <meta name="author" content="Shu Ting Hu">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shu Ting Hu</title>
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+    <title>shuting hu | girl meets (tech) world</title>
 
     <link rel="stylesheet" href="https://use.typekit.net/sew5mui.css">
     <link rel="stylesheet" href="style/style.css">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style/grid.css">
     <link rel="stylesheet" href="style/rotating.css">
     <link rel="stylesheet" href="style/accordion.css">
+    <link rel="stylesheet" href="style/chat.css">
 </head>
 
 <body>
@@ -83,15 +84,16 @@
                 and doing the occasional dabble into <b>design</b>.
                 <br><br>
                 In my free time you can catch me on the badminton or volleyball courts,
-                hiking local mountains, trying to become a polygot, making travel films
+                hiking local mountains, trying to become a polyglot, documenting my adventures through films
                 and organizing <b>hackathons</b> at <b><a href="https://www.nwplus.io/" target="_blank">nwPlus</a></b>!
                 I'm extremely passionate about <b>Diversity & Inclusion</b> and love building events through
                 <b><a href="https://cmd-f.nwplus.io/" target="_blank">cmd-f</a></b>
                 to support women*-identifying and underrepresented groups in their tech world explorations.
                 <br><br>
-                <b><a href="mailto:shutinghu2000@gmail.com">Let's chat</a></b>! Or find my mini dragon bot in the corner
-                who is eager to help break (melt) the ice. Try asking for my music reccomendations, what I'm currently
-                reading or what language I want to learn next.
+                <b><a href="mailto:shutinghu2000@gmail.com">Let's chat!</a></b> Or find my mini dragon bot in the corner
+                who is eager to help break (melt) the ice. Try asking for my music reccomendations, my favourite
+                podcasts,
+                what I'm currently reading or what language I want to learn next.
                 <br><br>
                 <div class="fish">𓆝𓆟𓆜𓆞𓆡</div>
             </p>
@@ -106,73 +108,136 @@
             </div>
             <ul class="accordion">
                 <li>
-                    <h3 class="level">COMING SOON</h3>
+                    <h3 class="level">Designing cmd-f</h3>
                     <span class="level">+</span>
                     <br>
-                    <p>Lorem ipsum dolor sit amet</p>
-                    <div class="hidden">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate
-                        velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est laborumsed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <p>British Columbia's first and largest all-women* hackathon</p><br>
+                    <div class="tags">
+                        <div>Figma</div>
+                        <div>UX/UI</div>
+                    </div>
+                    <div class="hidden proj-grid">
+                        <div>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate
+                            velit esse cillum dolore eu fugiat nulla pariatur.
+                            <br><br>
+                            Check it out:
+                            <b><a href="https://cmd-f.nwplus.io/" target="_blank">website</a></b>
+                        </div>
+                        <div>
+                            <img src="assets/design/cmd-f-learn.png" alt="cmd-f Learn launch graphic">
+                            <img src="assets/design/connect-f.png" alt="connect-f mentorship program launch graphic">
+                        </div>
                     </div>
                 </li>
                 <li>
                     <h3 class="level">Impostor</h3>
                     <span class="level">+</span>
                     <br>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra
-                        gravida, orci magna rhoncus neque.</p>
-                    <div class="hidden">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate
-                        velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est laborumsed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <p>Bringing productivity to remote work through some friendly public humiliation</p><br>
+                    <div class="tags">
+                        <div>React</div>
+                        <div>Node.js</div>
+                        <div>Firebase</div>
+                        <div>Heroku</div>
+                        <div>WebSockets</div>
+                    </div>
+                    <div class="hidden proj-grid">
+                        <div>
+                            Impostor is a productivity pomodoro designed to keep groups on task even when working
+                            remotely. Join a room with friends, customize your own avatar, communicate through the
+                            built-in chat and keep each other on task (don't be caught as the impostor). The Chrome
+                            extension monitors your browser tabs, checking against a custom list of
+                            unproductive sites. If one of those websites is visited, a websocket connection will ping
+                            the backend and notify all other users in the room of your action.
+                            <br><br>
+                            DubHacks 2020 finalist and Disney: Best Collaboration and Storytelling winner.
+                            <br><br>
+                            Check it out:
+                            <b><a href="https://devpost.com/software/impostor" target="_blank">devpost</a></b> |
+                            <b><a href="https://github.com/h4ckh0use" target="_blank">github</a></b>
+                        </div>
+                        <div>
+                            <img src="assets/proj/impostor.gif" alt="Impostor project gif">
+                        </div>
                     </div>
                 </li>
                 <li>
                     <h3 class="level">Wanderlist</h3>
                     <span class="level">+</span>
                     <br>
-                    <p>Lorem ipsum dolor sit amet</p>
-                    <div class="hidden">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate
-                        velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est laborumsed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <p>A travel planning and sharing social networking site</p><br>
+                    <div class="tags">
+                        <div>PHP</div>
+                        <div>MySQL</div>
+                        <div>XAMPP</div>
+                        <div>HTML/CSS</div>
+                    </div>
+                    <div class="hidden proj-grid">
+                        <div>
+                            The web app acts as a social media service dedicated towards trip planning, documenting and
+                            sharing.
+                            Upon logging in, a user can browse through others posts and view itinerary details
+                            such as duration, attractions, activities, and restaurants
+                            (can also search and filter for specific users or locations).
+                            Additionaly, admin users can moderate and view special stats to help track the growth of the
+                            site!
+                            <br><br>
+                            Utilized database normalization to future proof code and improve data integrity.
+                            Implemented various division, aggregation, join, projection, selection, update,
+                            deletion queries with interface for user to specify conditions.
+                            <br><br>
+                            Check it out: <b><a href="https://github.com/shuting-hu/Trip_Planning_Network"
+                                    target="_blank">github</a></b>
+                        </div>
+                        <div>
+                            <img src="assets/proj/wanderlist.gif" alt="Wanderlist project gif">
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <h3 class="level">Canary</h3>
+                    <h3 class="level">To Due</h3>
                     <span class="level">+</span>
                     <br>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra
-                        gravida, orci magna rhoncus neque.</p>
+                    <p>A task manager application</p><br>
+                    <div class="tags">
+                        <div>Java</div>
+                        <div>JUnit</div>
+                    </div>
                     <div class="hidden">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate
-                        velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est laborumsed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        <div>
+                            Developed a task parser to extract priorities, status, deadlines, etc.
+                            from any natural English description user gives to construct task objects
+                            in the to do list.
+                            Implemented task integration with object-oriented software design patterns.
+                            Agile and thorough implementation and documentation of code through
+                            writing JUnit tests with 100% code coverage.
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <h3 class="level">Personal Website</h3>
+                    <span class="level">+</span>
+                    <br>
+                    <p>This is what you're on right now :)</p><br>
+                    <div class="tags">
+                        <div>JavaScript</div>
+                        <div>HTML/CSS</div>
+                        <div>Dialogflow</div>
+                    </div>
+                    <div class="hidden">
+                        <div>
+                            A fairly Vanilla JS attempt at my first portfolio website.
+                            Illustrated personal graphics and icons using Figma.
+                            Incorporated a custom natural language chatbot with Dialogflow.
+                            As I progress through my tech adventure I plan to further improve the site, support project
+                            list views, animate my landing page graphic, further train the chatbot, add a "night" mode
+                            theme, dynamic refactoring and much more pizazz ahead!
+                        </div>
                     </div>
                 </li>
             </ul>
@@ -182,7 +247,11 @@
     <!-- FILMS -->
     <div class="wrapper" id="films">
         <div id="playlist">
-            insert portfolio playlist
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ctQC4rLhk5s"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
         </div>
 
         <div id="films">
@@ -221,13 +290,17 @@
                 <img src="assets/icons/ig.svg" alt="instagram" />
             </a>
         </div>
-        <div class="copr">created with ʕ•́ᴥ•̀ʔっ♥ by ShuTing Hu © 2021</div>
+        <div class="copr">created with ʕ•́ᴥ•̀ʔっ❤ by ShuTing Hu © 2021</div>
     </div>
 
     <script src="/js/rotating-text.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/js/anchor-scroll.js"></script>
     <script src="/js/accordion-view.js"></script>
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger intent="WELCOME" chat-title="💬" agent-id="6f3915d3-b9c5-4863-970b-d8b7ae05332d" language-code="en"
+        chat-icon="assets/icons/github.svg">
+    </df-messenger>
 </body>
 
 </html>
