close proj accordions

--- a/index.html
+++ b/index.html
@@ -116,21 +116,26 @@
                         <div>Figma</div>
                         <div>UX/UI</div>
                     </div>
-                    <div class="hidden proj-grid">
+                    <div class="hidden">
                         <div>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate
-                            velit esse cillum dolore eu fugiat nulla pariatur.
+                            Helping build two iterations of cmd-f has been one of the most rewarding explorations
+                            of my student career. Each year we've poured hours of thought, discussion and research
+                            to ensure women* feel welcome, supported, confident and that they belong in and are
+                            completely capable of shaping the future of this industry. With charity donation initiatives
+                            and a greater focus on wellness/self-care, cmd-f has shifted away from the traditional
+                            pressures of hackathon project completion. As a result, we saw an incredible increase in
+                            beginners and STEM newcomers stepping out to learn, network and grow. Logistics aside, I'm
+                            very grateful to have the additional space to transfer my visions to visual designs.
+                            Including designing our latest mentorship program (connect-f), the hackathon website and
+                            additional event assets!
                             <br><br>
                             Check it out:
                             <b><a href="https://cmd-f.nwplus.io/" target="_blank">website</a></b>
                         </div>
-                        <div>
-                            <img src="assets/design/cmd-f-learn.png" alt="cmd-f Learn launch graphic">
+                        <div class="proj-grid-triple">
                             <img src="assets/design/connect-f.png" alt="connect-f mentorship program launch graphic">
+                            <img src="assets/design/cmd-f.gif" alt="cmd-f 2021 website scroll gif">
+                            <img src="assets/design/cmd-f-learn.png" alt="cmd-f Learn launch graphic">
                         </div>
                     </div>
                 </li>
@@ -146,23 +151,26 @@
                         <div>Heroku</div>
                         <div>WebSockets</div>
                     </div>
-                    <div class="hidden proj-grid">
-                        <div>
-                            Impostor is a productivity pomodoro designed to keep groups on task even when working
-                            remotely. Join a room with friends, customize your own avatar, communicate through the
-                            built-in chat and keep each other on task (don't be caught as the impostor). The Chrome
-                            extension monitors your browser tabs, checking against a custom list of
-                            unproductive sites. If one of those websites is visited, a websocket connection will ping
-                            the backend and notify all other users in the room of your action.
-                            <br><br>
-                            DubHacks 2020 finalist and Disney: Best Collaboration and Storytelling winner.
-                            <br><br>
-                            Check it out:
-                            <b><a href="https://devpost.com/software/impostor" target="_blank">devpost</a></b> |
-                            <b><a href="https://github.com/h4ckh0use" target="_blank">github</a></b>
-                        </div>
-                        <div>
-                            <img src="assets/proj/impostor.gif" alt="Impostor project gif">
+                    <div class="hidden">
+                        <div class="proj-grid">
+                            <div>
+                                Impostor is a productivity pomodoro designed to keep groups on task even when working
+                                remotely. Join a room with friends, customize your own avatar, communicate through the
+                                built-in chat and keep each other on task (don't be caught as the impostor). The Chrome
+                                extension monitors your browser tabs, checking against a custom list of
+                                unproductive sites. If one of those websites is visited, a websocket connection will
+                                ping
+                                the backend and notify all other users in the room of your action.
+                                <br><br>
+                                DubHacks 2020 finalist and Disney: Best Collaboration and Storytelling prize.
+                                <br><br>
+                                Check it out:
+                                <b><a href="https://devpost.com/software/impostor" target="_blank">devpost</a></b> |
+                                <b><a href="https://github.com/h4ckh0use" target="_blank">github</a></b>
+                            </div>
+                            <div>
+                                <img src="assets/proj/impostor.gif" alt="Impostor project gif">
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -177,25 +185,29 @@
                         <div>XAMPP</div>
                         <div>HTML/CSS</div>
                     </div>
-                    <div class="hidden proj-grid">
-                        <div>
-                            The web app acts as a social media service dedicated towards trip planning, documenting and
-                            sharing.
-                            Upon logging in, a user can browse through others posts and view itinerary details
-                            such as duration, attractions, activities, and restaurants
-                            (can also search and filter for specific users or locations).
-                            Additionaly, admin users can moderate and view special stats to help track the growth of the
-                            site!
-                            <br><br>
-                            Utilized database normalization to future proof code and improve data integrity.
-                            Implemented various division, aggregation, join, projection, selection, update,
-                            deletion queries with interface for user to specify conditions.
-                            <br><br>
-                            Check it out: <b><a href="https://github.com/shuting-hu/Trip_Planning_Network"
-                                    target="_blank">github</a></b>
-                        </div>
-                        <div>
-                            <img src="assets/proj/wanderlist.gif" alt="Wanderlist project gif">
+                    <div class="hidden">
+                        <div class="proj-grid">
+                            <div>
+                                The web app acts as a social media service dedicated towards trip planning, documenting
+                                and
+                                sharing.
+                                Upon logging in, a user can browse through others posts and view itinerary details
+                                such as duration, attractions, activities, and restaurants
+                                (can also search and filter for specific users or locations).
+                                Additionaly, admin users can moderate and view special stats to help track the growth of
+                                the
+                                site!
+                                <br><br>
+                                Utilized database normalization to future proof code and improve data integrity.
+                                Implemented various division, aggregation, join, projection, selection, update,
+                                deletion queries with interface for user to specify conditions.
+                                <br><br>
+                                Check it out: <b><a href="https://github.com/shuting-hu/Trip_Planning_Network"
+                                        target="_blank">github</a></b>
+                            </div>
+                            <div>
+                                <img src="assets/proj/wanderlist.gif" alt="Wanderlist project gif">
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -223,7 +235,7 @@
                     <h3 class="level">Personal Website</h3>
                     <span class="level">+</span>
                     <br>
-                    <p>This is what you're on right now :)</p><br>
+                    <p>What you're on right now :)</p><br>
                     <div class="tags">
                         <div>JavaScript</div>
                         <div>HTML/CSS</div>
@@ -237,6 +249,9 @@
                             As I progress through my tech adventure I plan to further improve the site, support project
                             list views, animate my landing page graphic, further train the chatbot, add a "night" mode
                             theme, dynamic refactoring and much more pizazz ahead!
+                            <br><br>
+                                Check it out: <b><a href="https://github.com/shuting-hu/shuting-hu.github.io"
+                                        target="_blank">github</a></b>
                         </div>
                     </div>
                 </li>
