massive mediocrity incominggg

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div id="graphic">
-            <img src="assets/placeholder2.jpeg" alt="A Window to ShuTing's World">
+            <img src="assets/my-world.svg" alt="A Window to ShuTing's World">
         </div>
     </div>
 
@@ -183,7 +183,6 @@
                     <div class="tags">
                         <div>PHP</div>
                         <div>MySQL</div>
-                        <div>JavaScript</div>
                         <div>HTML/CSS</div>
                     </div>
                     <div class="hidden">
@@ -284,11 +283,11 @@
                 self-made souvenir from family trips. Piecing together clips, creating transitions, layering audio
                 altogether was like attempting a puzzle without a definitive ending piece. Filmmaking has been a way
                 for me to document my memories, share my experiences and express appreciation for what I love.
-                <br><br>
-                If you're curious, you can find my videos here on my
+                You'll find my videos here on my
                 <b><a href="https://www.youtube.com/channel/UC-pdQ79A-Vnd0fwWuJnR76g" target="_blank">YouTube
-                        channel</a></b>.
-                There's an intersection of tech with film/music/communication/entertainment/and more that I'd love to
+                        channel</a></b>!
+                <br><br>
+                There's an intersection of tech with film, music, communication, entertainment and more that I'd love to
                 explore in the future. Thank you for taking your time to read about my interests, I really appreciate
                 it. I believe I can learn something from everyone, so please don't hesitate to reach out, it would be an
                 absolute honour to hear your story!
