basic static web push

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="TODO"> -->
     <meta name="author" content="Shu Ting Hu">
     <meta name="viewport" content="width-device-width, initial-scale=1">
+    <link rel="icon" type="image/svg" href="assets/external/lantern.svg"/>
     <title>shuting hu | girl meets (tech) world</title>
 
     <link rel="stylesheet" href="https://use.typekit.net/sew5mui.css">
@@ -60,14 +61,14 @@
         </div>
 
         <div id="graphic">
-            <img src="assets/my-world.svg" alt="A Window to ShuTing's World">
+            <img src="assets/personal/my-world.svg" alt="A Window to ShuTing's World">
         </div>
     </div>
 
     <!-- ABOUT -->
     <div class="wrapper" id="about">
         <div id="photo">
-            <img src="assets/me.jpg" alt="Oh hi, it's me!">
+            <img src="assets/personal/me.jpg" alt="Oh hi, it's me!">
         </div>
 
         <div id="bio">
@@ -90,10 +91,9 @@
                 <b><a href="https://cmd-f.nwplus.io/" target="_blank">cmd-f</a></b>
                 to support women*-identifying and underrepresented groups in their tech world explorations.
                 <br><br>
-                <b><a href="mailto:shutinghu2000@gmail.com">Let's chat!</a></b> Or find my mini dragon bot in the corner
-                who is eager to help break (melt) the ice. Try asking for my music reccomendations, my favourite
-                podcasts,
-                what I'm currently reading or what language I want to learn next.
+                <b><a href="mailto:shutinghu2000@gmail.com">Let's chat!</a></b> Or find my mini chatbot in the corner
+                who is eager to help break the ice. Try asking for my music recommendations, my favourite
+                podcasts, what I'm currently reading or what language I want to learn next.
                 <br><br>
                 <div class="fish">𓆝𓆟𓆜𓆞𓆡</div>
             </p>
@@ -325,7 +325,7 @@
     <script src="/js/accordion-view.js"></script>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     <df-messenger intent="WELCOME" chat-title="💬" agent-id="6f3915d3-b9c5-4863-970b-d8b7ae05332d" language-code="en"
-        chat-icon="assets/icons/github.svg">
+        chat-icon="assets/external/lantern.svg">
     </df-messenger>
 </body>
 
