nav simple fade on scroll

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
     <script src="/js/rotating-text.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/js/anchor-scroll.js"></script>
+    <script src="/js/nav-scroll.js"></script>
     <script src="/js/accordion-view.js"></script>
     <script src="/js/carousel.js"></script>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
