them dots and temp pic

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- ABOUT -->
     <div class="wrapper" id="about">
         <div id="photo">
-            <img src="assets/placeholder.jpeg" alt="Oh hi, it's me!">
+            <img src="assets/personal/ME.JPG" alt="Oh hi, it's me!">
         </div>
 
         <div id="bio">
