--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <a href="#about">about</a>
             <a href="#projects">projects</a>
             <a href="#films">films</a>
-            <a href="#" target="_blank">résumé</a>
+            <a href="https://drive.google.com/file/d/1hcjVKImYfetaQi7YJSJ1mXsf8PAqNUCL/view?usp=sharing"
+                target="_blank">résumé</a>
         </div>
     </div>
 
