--- a/index.html
+++ b/index.html
@@ -377,14 +377,14 @@
             <a href="https://www.facebook.com/shutingwho" target="_blank">
                 <img src="assets/icons/fb.svg" alt="facebook" />
             </a>
-            <a href="https://www.instagram.com/shuting.hu/" target="_blank">
+            <!-- <a href="https://www.instagram.com/shuting.hu/" target="_blank">
                 <img src="assets/icons/ig.svg" alt="instagram" />
-            </a>
+            </a> -->
             <a href="https://open.spotify.com/user/shutinghu?si=0bc391713f7d43bf" target="_blank">
                 <img src="assets/icons/spotify.svg" alt="spotify" />
             </a>
         </div>
-        <div class="copr">created with ʕ•́ᴥ•̀ʔっ❤ by ShuTing Hu © 2021</div>
+        <div class="copr">created with ❤ by ShuTing Hu © 2021</div>
     </div>
 
     <script src="/js/rotating-text.js"></script>
